syntax = "proto3";

package project.planton.provider.kubernetes.addon.certmanagerkubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/foreignkey/v1/foreign_key.proto";
import "project/planton/shared/options/options.proto";
import "project/planton/shared/kubernetes/target_cluster.proto";

// CertManagerKubernetesSpec defines configuration for cert-manager on any cluster.
message CertManagerKubernetesSpec {
  // The Kubernetes cluster to install this addon on.
  project.planton.shared.kubernetes.KubernetesAddonTargetCluster target_cluster = 1;
  // Upstream release channel or version tag (e.g. "v1.16").
  string release_channel = 2 [
    (project.planton.shared.options.default) = "stable"
  ];
  // skip installation of self-signed issuer.
  bool skip_install_self_signed_issuer = 3;
  // Provider‑specific glue. Only one may be set.
  oneof provider_config {
    // Google Cloud Platform (GCP) + Workload Identity.
    CertManagerGkeConfig gke = 100;
    // Amazon Web Services (AWS) + IAM Roles for Service Accounts (IRSA).
    CertManagerEksConfig eks = 101;
    // Microsoft Azure (Azure) + Managed Identity.
    CertManagerAksConfig aks = 102;
  }
}

// Google Cloud DNS + Workload Identity.
message CertManagerGkeConfig {
  // The GCP project that hosts the DNS zone and the GKE cluster.
  project.planton.shared.foreignkey.v1.StringValueOrRef project_id = 1 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = GcpProject,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.project_id"
  ];
  // The GCP DNS zone ID to use for cert-manager.
  project.planton.shared.foreignkey.v1.StringValueOrRef dns_zone_id = 2 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = GcpDnsZone,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
  // google service account email to use for cert-manager.
  string gsa_email = 3 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = GcpServiceAccount,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.email"
  ];
}

// AWS Route53 + IRSA.
message CertManagerEksConfig {
  project.planton.shared.foreignkey.v1.StringValueOrRef route53_zone_id = 1 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = AwsRoute53Zone,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
  // Optional existing IAM role ARN for IRSA; auto‑created if blank.
  string irsa_role_arn_override = 2;
}

// Azure DNS + Managed Identity.
message CertManagerAksConfig {
  // The Azure DNS zone ID to use for cert-manager.
  string dns_zone_id = 1;
  // Optional existing managed identity client ID.
  string managed_identity_client_id = 2;
}
