syntax = "proto3";

package project.planton.provider.kubernetes.addon.externaldnskubernetes.v1;

import "project/planton/credential/kubernetesclustercredential/v1/spec.proto";
import "project/planton/provider/kubernetes/addon/externaldnskubernetes/v1/api.proto";

//input for external-dns-kubernetes stack
message ExternalDnsKubernetesStackInput {
  //target cloud-resource
  ExternalDnsKubernetes target = 1;
  //provider-credential
  project.planton.credential.kubernetesclustercredential.v1.KubernetesClusterCredentialSpec provider_credential = 2;
}
