syntax = "proto3";

package project.planton.shared.foreignkey.v1;

message ValueFromRef {
  string kind = 1;
  string namespace = 2;
  string name = 3;
  string fieldPath = 4;
}

message StringValueOrRef {
  string value = 1;
  ValueFromRef value_from = 2;
}

message Int32ValueOrRef {
  int32 value = 1;
  ValueFromRef value_from = 2;
}
